# catplot

./: pyproject.toml
src/catplot/: __init__.py  boxplot.py  plotters.py
