[project]
name = "catplot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Olav Vahtras", email = "vahtras@kth.se" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
catplot = "catplot:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
