[project]
name = "catplot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Olav Vahtras", email = "vahtras@kth.se" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyqt5>=5.15.11",
    "seaborn>=0.13.2",
]

[project.scripts]
catplot = "catplot.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
